jmm.java

/* jmm.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. jmm.java */
import java.io.*;

public class jmm/* @bgen(jjtree) */ implements jmmTreeConstants, jmmConstants {/* @bgen(jjtree) */
	protected static JJTjmmState jjtree = new JJTjmmState();
	static int errors = 0;

	public static void printUsage() {
		System.out.println("Usage:  ");
		System.out.println("       java jmm <input_file.jmm>");
	}
	public static void main(String args[]) throws ParseException {
		if (args.length != 1) {
			printUsage();
			return;
		}

		FileInputStream file;
		try {
			file = new FileInputStream(args[0]);
		} catch (Exception e) {
			System.err.println("File " + args[0] + " not found");
			return;
		}

		jmm myjmm = new jmm(file);
		SimpleNode root = myjmm.Program(); // devolve referência para o nó raiz da árvore
		//root.dump(""); // imprime no ecrã a árvore

		try{
			SymbolTable ST = new SymbolTable(root);
			//ST.dump();
			root.semanticAnalysis(ST,null); //TODO - TRY CATCH EM TODOS OS NODES PARA VER VARIOS ERROS.
		} catch (Exception e) {
			System.out.println(e.getMessage());
		}
	}

	static void error_skipto(int kind) throws ParseException {/* @bgen(jjtree) error_skipto */
		ASTerror_skipto jjtn000 = new ASTerror_skipto(JJTERROR_SKIPTO);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		try {
			ParseException e = generateParseException(); // generate the exception object.
			System.out.println("Error in while Statement:\u005cn" + e.toString()); // print the error message
			Token t;
			do {
				t = getNextToken();
			} while (t.kind != kind);/* @bgen(jjtree) */
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		} // The above loop consumes tokens all the way up to a token of
			// "kind". We use a do-while loop rather than a while because the
			// current token is the one immediately before the erroneous token
			// (in our case the token immediately before what should have been
			// "if"/"while".

	}

	static final public SimpleNode Program() throws ParseException {/* @bgen(jjtree) Program */
		ASTProgram jjtn000 = new ASTProgram(JJTPROGRAM);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		try {
			ClassDeclaration();
			jj_consume_token(0);
			jjtree.closeNodeScope(jjtn000, true);
			jjtc000 = false;
			{
				if ("" != null)
					return jjtn000;
			}
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			if (jjte000 instanceof RuntimeException) {
				{
					if (true)
						throw (RuntimeException) jjte000;
				}
			}
			if (jjte000 instanceof ParseException) {
				{
					if (true)
						throw (ParseException) jjte000;
				}
			}
			{
				if (true)
					throw (Error) jjte000;
			}
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
		throw new Error("Missing return statement in function");
	}

	static final public void ClassDeclaration() throws ParseException {/* @bgen(jjtree) ClassDeclaration */
		ASTClassDeclaration jjtn000 = new ASTClassDeclaration(JJTCLASSDECLARATION);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		Token t1, t2;
		try {
			try {
				jj_consume_token(CLASS);
				t1 = jj_consume_token(IDENTIFIER);
				jjtn000.class_name = t1.image;
				switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
				case EXTENDS: {
					jj_consume_token(EXTENDS);
					t2 = jj_consume_token(IDENTIFIER);
					jjtn000.extends_class = t2.image;
					break;
				}
				default:
					jj_la1[0] = jj_gen;
					;
				}
				jj_consume_token(LBRACE);
				label_1: while (true) {
					switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
					case BOOLEAN:
					case INT:
					case IDENTIFIER: {
						;
						break;
					}
					default:
						jj_la1[1] = jj_gen;
						break label_1;
					}
					VarDeclaration();
				}
				label_2: while (true) {
					switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
					case PUBLIC: {
						;
						break;
					}
					default:
						jj_la1[2] = jj_gen;
						break label_2;
					}
					jj_consume_token(PUBLIC);
					switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
					case STATIC: {
						MainDeclaration();
						break;
					}
					case BOOLEAN:
					case INT:
					case IDENTIFIER: {
						MethodDeclaration();
						break;
					}
					default:
						jj_la1[3] = jj_gen;
						jj_consume_token(-1);
						throw new ParseException();
					}
				}
				jj_consume_token(RBRACE);
			} catch (Exception e) {
				System.out.println("Expected Class Declaration\u005cn\u005cn" + e);
				System.exit(1);
			}
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			if (jjte000 instanceof RuntimeException) {
				{
					if (true)
						throw (RuntimeException) jjte000;
				}
			}
			if (jjte000 instanceof ParseException) {
				{
					if (true)
						throw (ParseException) jjte000;
				}
			}
			{
				if (true)
					throw (Error) jjte000;
			}
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	static final public void VarDeclaration() throws ParseException {/* @bgen(jjtree) VarDeclaration */
		ASTVarDeclaration jjtn000 = new ASTVarDeclaration(JJTVARDECLARATION);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		Token t;
		try {
			try {
				Type();
				t = jj_consume_token(IDENTIFIER);
				jj_consume_token(SEMICOLON);
				jjtn000.name = t.image;
			} catch (Exception e) {
				System.out.println("Expected Var Declaration\u005cn\u005cn" + e);
				System.exit(1);
			}
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			if (jjte000 instanceof RuntimeException) {
				{
					if (true)
						throw (RuntimeException) jjte000;
				}
			}
			if (jjte000 instanceof ParseException) {
				{
					if (true)
						throw (ParseException) jjte000;
				}
			}
			{
				if (true)
					throw (Error) jjte000;
			}
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	static final public void MainDeclaration() throws ParseException {/* @bgen(jjtree) MainDeclaration */
		ASTMainDeclaration jjtn000 = new ASTMainDeclaration(JJTMAINDECLARATION);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		Token t;
		try {
			try {
				jj_consume_token(STATIC);
				jj_consume_token(VOID);
				jj_consume_token(MAIN);
				jj_consume_token(LPAREN);
				jj_consume_token(STRING);
				jj_consume_token(LBRACKET);
				jj_consume_token(RBRACKET);
				t = jj_consume_token(IDENTIFIER);
				jj_consume_token(RPAREN);
				jj_consume_token(LBRACE);
				jjtn000.args = t.image;
				label_3: while (true) {
					if (jj_2_1(2)) {
						;
					} else {
						break label_3;
					}
					VarDeclaration();
				}
				label_4: while (true) {
					if (jj_2_2(2)) {
						;
					} else {
						break label_4;
					}
					Statement();
				}
				jj_consume_token(RBRACE);
			} catch (Exception e) {
				System.out.println("Expected Main Declaration\u005cn\u005cn" + e);
				System.exit(1);
			}
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			if (jjte000 instanceof RuntimeException) {
				{
					if (true)
						throw (RuntimeException) jjte000;
				}
			}
			if (jjte000 instanceof ParseException) {
				{
					if (true)
						throw (ParseException) jjte000;
				}
			}
			{
				if (true)
					throw (Error) jjte000;
			}
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	static final public void MethodDeclaration() throws ParseException {/* @bgen(jjtree) MethodDeclaration */
		ASTMethodDeclaration jjtn000 = new ASTMethodDeclaration(JJTMETHODDECLARATION);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		Token t;
		try {
			try {
				Type();
				t = jj_consume_token(IDENTIFIER);
				jjtn000.name = t.image;
				jj_consume_token(LPAREN);
				switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
				case BOOLEAN:
				case INT:
				case IDENTIFIER: {
					Parameters();
					break;
				}
				default:
					jj_la1[4] = jj_gen;
					;
				}
				jj_consume_token(RPAREN);
				jj_consume_token(LBRACE);
				label_5: while (true) {
					if (jj_2_3(2)) {
						;
					} else {
						break label_5;
					}
					VarDeclaration();
				}
				label_6: while (true) {
					if (jj_2_4(2)) {
						;
					} else {
						break label_6;
					}
					Statement();
				}
				Return();
				jj_consume_token(RBRACE);
			} catch (Exception e) {
				System.out.println("Expected Method Declaration\u005cn\u005cn" + e);
				System.exit(1);
			}
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			if (jjte000 instanceof RuntimeException) {
				{
					if (true)
						throw (RuntimeException) jjte000;
				}
			}
			if (jjte000 instanceof ParseException) {
				{
					if (true)
						throw (ParseException) jjte000;
				}
			}
			{
				if (true)
					throw (Error) jjte000;
			}
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	static final public void Parameters() throws ParseException {/* @bgen(jjtree) Parameters */
		ASTParameters jjtn000 = new ASTParameters(JJTPARAMETERS);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		try {
			Parameter();
			label_7: while (true) {
				switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
				case COMMA: {
					;
					break;
				}
				default:
					jj_la1[5] = jj_gen;
					break label_7;
				}
				jj_consume_token(COMMA);
				Parameter();
			}
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			if (jjte000 instanceof RuntimeException) {
				{
					if (true)
						throw (RuntimeException) jjte000;
				}
			}
			if (jjte000 instanceof ParseException) {
				{
					if (true)
						throw (ParseException) jjte000;
				}
			}
			{
				if (true)
					throw (Error) jjte000;
			}
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	static final public void Parameter() throws ParseException {/* @bgen(jjtree) Parameter */
		ASTParameter jjtn000 = new ASTParameter(JJTPARAMETER);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		Token t;
		try {
			Type();
			t = jj_consume_token(IDENTIFIER);
			jjtree.closeNodeScope(jjtn000, true);
			jjtc000 = false;
			jjtn000.name = t.image;
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			if (jjte000 instanceof RuntimeException) {
				{
					if (true)
						throw (RuntimeException) jjte000;
				}
			}
			if (jjte000 instanceof ParseException) {
				{
					if (true)
						throw (ParseException) jjte000;
				}
			}
			{
				if (true)
					throw (Error) jjte000;
			}
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	static final public void Return() throws ParseException {/* @bgen(jjtree) Return */
		ASTReturn jjtn000 = new ASTReturn(JJTRETURN);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		try {
			jj_consume_token(RETURN);
			Expression();
			jj_consume_token(SEMICOLON);
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			if (jjte000 instanceof RuntimeException) {
				{
					if (true)
						throw (RuntimeException) jjte000;
				}
			}
			if (jjte000 instanceof ParseException) {
				{
					if (true)
						throw (ParseException) jjte000;
				}
			}
			{
				if (true)
					throw (Error) jjte000;
			}
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	static final public void Type() throws ParseException {/* @bgen(jjtree) Type */
		ASTType jjtn000 = new ASTType(JJTTYPE);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		Token t;
		try {
			try {
				switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
				case INT: {
					t = jj_consume_token(INT);
					switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
					case LBRACKET: {
						jj_consume_token(LBRACKET);
						jj_consume_token(RBRACKET);
						jjtn000.isArray = true;
						break;
					}
					default:
						jj_la1[6] = jj_gen;
						;
					}
					break;
				}
				case BOOLEAN: {
					t = jj_consume_token(BOOLEAN);
					break;
				}
				case IDENTIFIER: {
					t = jj_consume_token(IDENTIFIER);
					break;
				}
				default:
					jj_la1[7] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
				jjtn000.name = t.image;
			} catch (Exception e) {
				System.out.println("Expected Type\u005cn\u005cn" + e);
				System.exit(1);
			}
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	static final public void Statement() throws ParseException {/* @bgen(jjtree) Statement */
		ASTStatement jjtn000 = new ASTStatement(JJTSTATEMENT);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		Token t;
		try {
			try {
				switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
				case LBRACE: {
					jj_consume_token(LBRACE);
					label_8: while (true) {
						switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
						case FALSE:
						case IF:
						case NEW:
						case THIS:
						case TRUE:
						case WHILE:
						case IDENTIFIER:
						case INTEGERLITERAL:
						case LPAREN:
						case LBRACE:
						case BANG: {
							;
							break;
						}
						default:
							jj_la1[8] = jj_gen;
							break label_8;
						}
						Statement();
					}
					jj_consume_token(RBRACE);
					jjtn000.type = "multiple";
					break;
				}
				case IF: {
					jj_consume_token(IF);
					jj_consume_token(LPAREN);
					Expression();
					jj_consume_token(RPAREN);
					Statement();
					jj_consume_token(ELSE);
					Statement();
					jjtn000.type = "if";
					break;
				}
				case WHILE: {
					jj_consume_token(WHILE);
					try {
						jj_consume_token(LPAREN);
						Expression();
						jj_consume_token(RPAREN);
					} catch (ParseException e) {
						error_skipto(RPAREN);
						errors++;
						if (errors == 10)
							System.exit(10);
					}
					Statement();
					jjtn000.type = "while";
					break;
				}
				default:
					jj_la1[9] = jj_gen;
					if (jj_2_5(2147483647)) {
						t = jj_consume_token(IDENTIFIER);
						ArrayAcc();
						jj_consume_token(ASSIGN);
						Expression();
						jj_consume_token(SEMICOLON);
						jjtn000.type = "[]=";
						jjtn000.identifier = t.image;
					} else if (jj_2_6(2)) {
						t = jj_consume_token(IDENTIFIER);
						jj_consume_token(ASSIGN);
						Expression();
						jj_consume_token(SEMICOLON);
						jjtn000.type = "=";
						jjtn000.identifier = t.image;
					} else {
						switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
						case FALSE:
						case NEW:
						case THIS:
						case TRUE:
						case IDENTIFIER:
						case INTEGERLITERAL:
						case LPAREN:
						case BANG: {
							Expression();
							jj_consume_token(SEMICOLON);
							break;
						}
						default:
							jj_la1[10] = jj_gen;
							jj_consume_token(-1);
							throw new ParseException();
						}
					}
				}
			} catch (Exception e) {
				System.out.println("Expected Statement\u005cn\u005cn" + e);
				System.exit(1);
			}
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			if (jjte000 instanceof RuntimeException) {
				{
					if (true)
						throw (RuntimeException) jjte000;
				}
			}
			if (jjte000 instanceof ParseException) {
				{
					if (true)
						throw (ParseException) jjte000;
				}
			}
			{
				if (true)
					throw (Error) jjte000;
			}
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	static final public void Expression() throws ParseException {
		try {
			LT();
			label_9: while (true) {
				if (jj_2_7(2)) {
					;
				} else {
					break label_9;
				}
				jj_consume_token(SC_AND);
				ASTAND jjtn001 = new ASTAND(JJTAND);
				boolean jjtc001 = true;
				jjtree.openNodeScope(jjtn001);
				try {
					LT();
				} catch (Throwable jjte001) {
					if (jjtc001) {
						jjtree.clearNodeScope(jjtn001);
						jjtc001 = false;
					} else {
						jjtree.popNode();
					}
					if (jjte001 instanceof RuntimeException) {
						{
							if (true)
								throw (RuntimeException) jjte001;
						}
					}
					if (jjte001 instanceof ParseException) {
						{
							if (true)
								throw (ParseException) jjte001;
						}
					}
					{
						if (true)
							throw (Error) jjte001;
					}
				} finally {
					if (jjtc001) {
						jjtree.closeNodeScope(jjtn001, 2);
					}
				}
			}
		} catch (Exception e) {
			System.out.println("Expected Expression\u005cn\u005cn" + e);
			System.exit(1);
		}
	}

	static final public void LT() throws ParseException {
		Sum();
		label_10: while (true) {
			if (jj_2_8(2)) {
				;
			} else {
				break label_10;
			}
			jj_consume_token(LT);
			ASTLESS jjtn001 = new ASTLESS(JJTLESS);
			boolean jjtc001 = true;
			jjtree.openNodeScope(jjtn001);
			try {
				Sum();
			} catch (Throwable jjte001) {
				if (jjtc001) {
					jjtree.clearNodeScope(jjtn001);
					jjtc001 = false;
				} else {
					jjtree.popNode();
				}
				if (jjte001 instanceof RuntimeException) {
					{
						if (true)
							throw (RuntimeException) jjte001;
					}
				}
				if (jjte001 instanceof ParseException) {
					{
						if (true)
							throw (ParseException) jjte001;
					}
				}
				{
					if (true)
						throw (Error) jjte001;
				}
			} finally {
				if (jjtc001) {
					jjtree.closeNodeScope(jjtn001, 2);
				}
			}
		}
	}

	static final public void Sum() throws ParseException {
		Mult();
		label_11: while (true) {
			if (jj_2_9(2)) {
				;
			} else {
				break label_11;
			}
			switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
			case PLUS: {
				jj_consume_token(PLUS);
				ASTADD jjtn001 = new ASTADD(JJTADD);
				boolean jjtc001 = true;
				jjtree.openNodeScope(jjtn001);
				try {
					Mult();
				} catch (Throwable jjte001) {
					if (jjtc001) {
						jjtree.clearNodeScope(jjtn001);
						jjtc001 = false;
					} else {
						jjtree.popNode();
					}
					if (jjte001 instanceof RuntimeException) {
						{
							if (true)
								throw (RuntimeException) jjte001;
						}
					}
					if (jjte001 instanceof ParseException) {
						{
							if (true)
								throw (ParseException) jjte001;
						}
					}
					{
						if (true)
							throw (Error) jjte001;
					}
				} finally {
					if (jjtc001) {
						jjtree.closeNodeScope(jjtn001, 2);
					}
				}
				break;
			}
			case MINUS: {
				jj_consume_token(MINUS);
				ASTSUB jjtn002 = new ASTSUB(JJTSUB);
				boolean jjtc002 = true;
				jjtree.openNodeScope(jjtn002);
				try {
					Mult();
				} catch (Throwable jjte002) {
					if (jjtc002) {
						jjtree.clearNodeScope(jjtn002);
						jjtc002 = false;
					} else {
						jjtree.popNode();
					}
					if (jjte002 instanceof RuntimeException) {
						{
							if (true)
								throw (RuntimeException) jjte002;
						}
					}
					if (jjte002 instanceof ParseException) {
						{
							if (true)
								throw (ParseException) jjte002;
						}
					}
					{
						if (true)
							throw (Error) jjte002;
					}
				} finally {
					if (jjtc002) {
						jjtree.closeNodeScope(jjtn002, 2);
					}
				}
				break;
			}
			default:
				jj_la1[11] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
		}
	}

	static final public void Mult() throws ParseException {
		Literal();
		label_12: while (true) {
			if (jj_2_10(2)) {
				;
			} else {
				break label_12;
			}
			switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
			case STAR: {
				jj_consume_token(STAR);
				ASTMULT jjtn001 = new ASTMULT(JJTMULT);
				boolean jjtc001 = true;
				jjtree.openNodeScope(jjtn001);
				try {
					Literal();
				} catch (Throwable jjte001) {
					if (jjtc001) {
						jjtree.clearNodeScope(jjtn001);
						jjtc001 = false;
					} else {
						jjtree.popNode();
					}
					if (jjte001 instanceof RuntimeException) {
						{
							if (true)
								throw (RuntimeException) jjte001;
						}
					}
					if (jjte001 instanceof ParseException) {
						{
							if (true)
								throw (ParseException) jjte001;
						}
					}
					{
						if (true)
							throw (Error) jjte001;
					}
				} finally {
					if (jjtc001) {
						jjtree.closeNodeScope(jjtn001, 2);
					}
				}
				break;
			}
			case SLASH: {
				jj_consume_token(SLASH);
				ASTDIV jjtn002 = new ASTDIV(JJTDIV);
				boolean jjtc002 = true;
				jjtree.openNodeScope(jjtn002);
				try {
					Literal();
				} catch (Throwable jjte002) {
					if (jjtc002) {
						jjtree.clearNodeScope(jjtn002);
						jjtc002 = false;
					} else {
						jjtree.popNode();
					}
					if (jjte002 instanceof RuntimeException) {
						{
							if (true)
								throw (RuntimeException) jjte002;
						}
					}
					if (jjte002 instanceof ParseException) {
						{
							if (true)
								throw (ParseException) jjte002;
						}
					}
					{
						if (true)
							throw (Error) jjte002;
					}
				} finally {
					if (jjtc002) {
						jjtree.closeNodeScope(jjtn002, 2);
					}
				}
				break;
			}
			default:
				jj_la1[12] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
		}
	}
